@@ -1,3 +1,6 @@
+moved saving emails to a sent folder from the AWTEvent thread to the 
+appropriate FolderThread.
+
 fixed the CachingFolderInfo to work with the new display system.
 
 020322 release
